# neuro_stats

./: pyproject.toml
apple_vision/: main.py  vision_recognition.py
neuro_stats/: image.py  readHandwrittenBlocks.py  readHandwrittenImage.py  read_blocks.py  read_columns.py  read_columns_pdf.py  read_symbols_from_prepared_blocks.py  read_table.py  test_mnist.py  torchLeNet5.py  torchwNIST.py
neuro_stats/OCR_tests/: test_mnist.py  torchLeNet5.py  torchwNIST.py
neuro_stats/create_table/: create_table.py  output.xlsx
neuro_stats/different_methods/: image.py  read_blocks.py
neuro_stats/old_variants/: read_columns.py  read_columns_pdf.py  read_symbols_from_prepared_blocks.py  test_mnist.py  torchLeNet5.py
neuro_stats/output/: cell_info.json
neuro_stats/pdf_splitter/: extract_second_page_for_skin_reactions.py  splitter.py
work_with_prepared_data/: controls.py  draw_abs_rel_graph_compare.py  draw_abs_rel_graph_comparer.py  draw_base_grapf.py  draw_base_grapfs.py  draw_base_graphs_compare.py  draw_grapf.py  draw_two_base_graphs_compare.py  draw_two_graphs.py  skin_reactions_base_grapf.py  support_stats_methods.py
work_with_prepared_data/datas/: P_25.6_n_2.56_2019.xlsx  n_2.56_p_25.6_2019.xlsx  n_7.2_p_25.2_2023.xlsx  n_7.2_p_25.2_2023_2.xlsx  n_7.2_p_25.2_2023_3.xlsx  p_25.2_n_7.2_2023.xlsx  p_25.2_n_7.2_2023_2.xlsx  p_25.2_n_7.2_2023_3.xlsx
work_with_prepared_data/datas/control/: 02.02.2023_n_12.xlsx  02.02.2023_n_18.xlsx  08.10.2021_p32_прострел.xlsx  14.06.2022_p_36_в_пике.xlsx  16.03.2023_e_36.xlsx  16.03.2023_n_22.xlsx  30.03.2022_p_36_прострел.xlsx  (+1 more)
(+6 files in other folders)
