[tool.poetry]
name = "neuro-stats"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "neuro_stats"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
opencv-python = "^4.8.0.74"
tensorboard = "2.10.1"
torchsummaryx = "^1.3.0"
pymupdf = "^1.22.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
